utils_str=[
    #Contains file paths from utils folder
    'Reindeer/utils/list.c',
    'Reindeer/utils/string.c'
]
#Some of the lists are empty because not implemented till now
lexer_src=[
    #Contains file paths from lexer folder
]

ast_src=[
    #Contains file paths from ast folder
]

parser_src=[
    #Contains file paths from lexer folder
]
